force-app/main/default/objects/ComissaoItem__c/ComissaoItem__c.object-meta.xml
<CustomObject>
    <label>Comissão Item</label>
    <nameField>
        <displayFormat>COM {0000000000}</displayFormat>
        <label>N° Comissão</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comissão Itens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>