force-app/main/default/objects/ComissaoItem__c/fields/ClienteId__c.field-meta.xml
<CustomField>
    <fullName>ClienteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comissão Itens</relationshipLabel>
    <relationshipName>ComissaoItens</relationshipName>
    <type>Lookup</type>
</CustomField>