force-app/main/default/objects/ComissaoItem__c/fields/CodigoItemComissao__c.field-meta.xml
<CustomField>
    <fullName>CodigoItemComissao__c</fullName>
    <externalId>true</externalId>
    <label>Código Item Comissão</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>