force-app/main/default/objects/ComissaoItem__c/fields/DataCredito__c.field-meta.xml
<CustomField>
    <fullName>DataCredito__c</fullName>
    <label>Data do Crédito</label>
    <type>Date</type>
</CustomField>