force-app/main/default/objects/ComissaoItem__c/fields/NotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscal__c</fullName>
    <label>Nota Fiscal</label>
    <length>14</length>
    <type>Text</type>
</CustomField>