force-app/main/default/objects/ComissaoItem__c/fields/NumeroPedido__c.field-meta.xml
<CustomField>
    <fullName>NumeroPedido__c</fullName>
    <formula>PedidoId__r.OrderNumber</formula>
    <label>Número Pedido</label>
    <type>Text</type>
</CustomField>