force-app/main/default/objects/ComissaoItem__c/fields/NumeroTitulo__c.field-meta.xml
<CustomField>
    <fullName>NumeroTitulo__c</fullName>
    <label>Número Título</label>
    <length>14</length>
    <type>Text</type>
</CustomField>