force-app/main/default/objects/ComissaoItem__c/fields/PedidoId__c.field-meta.xml
<CustomField>
    <fullName>PedidoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Comissão Itens</relationshipLabel>
    <relationshipName>ComissaoItens</relationshipName>
    <type>Lookup</type>
</CustomField>