force-app/main/default/objects/ComissaoItem__c/fields/RepresentanteId__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comissão Itens</relationshipLabel>
    <relationshipName>ComisssoItens</relationshipName>
    <type>Lookup</type>
</CustomField>