force-app/main/default/objects/ComissaoItem__c/fields/TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumento__c</fullName>
    <label>Tipo de Documento</label>
    <length>2</length>
    <type>Text</type>
</CustomField>