force-app/main/default/objects/ComissaoItem__c/fields/ValorBaseComissao__c.field-meta.xml
<CustomField>
    <fullName>ValorBaseComissao__c</fullName>
    <label>Valor Base de Comissão</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>