force-app/main/default/objects/ComissaoItem__c/fields/ValorComissao__c.field-meta.xml
<CustomField>
    <fullName>ValorComissao__c</fullName>
    <label>Valor Comissão</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>